# infodemic-monitor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  railway.toml
.railway/: api.env.example  worker.env.example
backend/: .dockerignore  Dockerfile  Dockerfile.gpu  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routers/: health.py  jobs.py  videos.py
backend/app/auth/: dependencies.py
backend/app/core/: config.py  exceptions.py
backend/app/core/extraction/: multimodal.py  transcription.py
backend/app/core/grounding/: pubmed.py
backend/app/core/inference/: __init__.py  classifier.py
backend/app/core/inference/providers/: anthropic_provider.py  openai_provider.py
backend/app/core/pipeline/: __init__.py
backend/app/core/schemas/: pipeline.py
backend/app/core/storage/: __init__.py  supabase_backend.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py  0002_add_storage_key.py  0003_add_job_error_code.py  0004_add_citations_to_results.py
backend/app/db/models/: __init__.py  job.py  result.py  video.py
backend/app/services/: job_service.py  video_service.py
backend/app/worker/: celery_app.py  tasks.py
backend/who_infodemic_monitor_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  middleware.ts  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api-server.ts  api.ts  supabase-server.ts
slices/: A.md  B.md  C.md  D.md  E.md  F.md  G.md  H.md
(+6 files in other folders)
